WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
183308
Calling removeTrack with RTCRtpSender does not set SenderTrack to null
https://bugs.webkit.org/show_bug.cgi?id=183308
Summary
Calling removeTrack with RTCRtpSender does not set SenderTrack to null
Thomas Mullen
Reported
2018-03-02 18:07:57 PST
Calling RTCPeerConnection.removeTrack with a RTCRtpSender does not set the sender's "track" attribute to null. This is against the the specification:
https://www.w3.org/TR/webrtc/#removeTrack
Both Chrome and Firefox do this and it is important to determining if a sender has been removed after renegotiation.
Attachments
Patch
(4.57 KB, patch)
2018-03-12 14:42 PDT
,
youenn fablet
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Thomas Mullen
Comment 1
2018-03-02 18:08:46 PST
Simple way to reproduce: ``` var config = { "iceTransports": 'all', "iceServers": [{ "urls": "stun:global.stun.twilio.com:3478?transport=udp" }] } var pc = new RTCPeerConnection(config) var getUserMedia = (navigator.getUserMedia || navigator.webkitGetUserMedia || navigator.mozGetUserMedia).bind(navigator) getUserMedia({ video: true, audio: true }, function(stream) { var track = stream.getTracks()[0] var sender = pc.addTrack(track, stream) pc.removeTrack(sender) console.log(sender.track) // should be null }, function(err) { throw err }) ```
youenn fablet
Comment 2
2018-03-12 14:42:20 PDT
Created
attachment 335641
[details]
Patch
WebKit Commit Bot
Comment 3
2018-03-13 14:14:18 PDT
Comment on
attachment 335641
[details]
Patch Clearing flags on attachment: 335641 Committed
r229587
: <
https://trac.webkit.org/changeset/229587
>
WebKit Commit Bot
Comment 4
2018-03-13 14:14:19 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 5
2018-03-13 14:15:35 PDT
<
rdar://problem/38431087
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug