Calling removeTrack with RTCRtpSender does not set SenderTrack to null https://bugs.webkit.org/show_bug.cgi?id=183308

Reviewed by Eric Carlson.

LayoutTests/imported/w3c:

* web-platform-tests/webrtc/RTCPeerConnection-removeTrack.https-expected.txt:

Source/WebCore:

Covered by updated test.

* Modules/mediastream/RTCRtpSender.cpp:
(WebCore::RTCRtpSender::stop): Set track to null when being stopped i.e. removed.
* Modules/mediastream/RTCRtpSender.h:


Canonical link: https://commits.webkit.org/199272@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@229587 268f45cc-cd09-0410-ab3c-d52691b4dbfc